force-app/main/default/objects/Price_Increases__c/Price_Increases__c.object-meta.xml
<CustomObject>
    <label>Price Increases</label>
    <nameField>
        <label>Price Increases Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Increases</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>