force-app/main/default/objects/Price_Increases__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Price Increases</relationshipLabel>
    <relationshipName>Price_Increases</relationshipName>
    <type>Lookup</type>
</CustomField>