force-app/main/default/objects/Price_Increases__c/fields/Achieved_Increase__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Increase__c</fullName>
    <label>Achieved Increase %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>