force-app/main/default/objects/Price_Increases__c/fields/Achieved_Increase_Is_Blank__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Increase_Is_Blank__c</fullName>
    <description>This will be checked if the &apos;Achieved Increase&apos; field is blank. (0 is not a blank value).</description>
    <formula>ISBLANK(Achieved_Increase__c)</formula>
    <inlineHelpText>This will be checked if the &apos;Achieved Increase&apos; field is blank. (0 is not a blank value).</inlineHelpText>
    <label>Achieved Increase Is Blank</label>
    <type>Checkbox</type>
</CustomField>