force-app/main/default/objects/Price_Increases__c/fields/Achievement_v_Budget__c.field-meta.xml
<CustomField>
    <fullName>Achievement_v_Budget__c</fullName>
    <label>Achievement v Budget %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>