force-app/main/default/objects/Price_Increases__c/fields/Actual_date_effect__c.field-meta.xml
<CustomField>
    <fullName>Actual_date_effect__c</fullName>
    <label>Actual date effect</label>
    <type>Date</type>
</CustomField>