force-app/main/default/objects/Price_Increases__c/fields/Budgeted_date_effect__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_date_effect__c</fullName>
    <label>Budgeted date effect</label>
    <type>Date</type>
</CustomField>