force-app/main/default/objects/Price_Increases__c/fields/Budgeted_Increase__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Increase__c</fullName>
    <label>Budgeted Increase %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>