force-app/main/default/objects/Price_Increases__c/fields/Latest_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Latest_Proposal__c</fullName>
    <label>Latest Proposal %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>