force-app/main/default/objects/Price_Increases__c/fields/Latest_Proposal_Is_Blank__c.field-meta.xml
<CustomField>
    <fullName>Latest_Proposal_Is_Blank__c</fullName>
    <description>This will be checked if the &apos;Latest Proposal&apos; field is blank. (0 is not a blank value).</description>
    <formula>ISBLANK(Latest_Proposal__c)</formula>
    <inlineHelpText>This will be checked if the &apos;Latest Proposal&apos; field is blank. (0 is not a blank value).</inlineHelpText>
    <label>Latest Proposal Is Blank</label>
    <type>Checkbox</type>
</CustomField>