force-app/main/default/objects/Price_Increases__c/fields/PAF__c.field-meta.xml
<CustomField>
    <fullName>PAF__c</fullName>
    <label>PAF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>