force-app/main/default/objects/Price_Increases__c/listViews/TY_2018.listView-meta.xml
<ListView>
    <fullName>TY_2018</fullName>
    <columns>NAME</columns>
    <columns>Trading_Year__c</columns>
    <columns>Budgeted_date_effect__c</columns>
    <columns>Actual_date_effect__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trading_Year__c</field>
        <operation>equals</operation>
        <value>2018</value>
    </filters>
    <label>2018</label>
</ListView>