force-app/main/default/objects/Price_Increases__c/listViews/X2021.listView-meta.xml
<ListView>
    <fullName>X2021</fullName>
    <columns>Sales_Organization__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Latest_Proposal__c</columns>
    <columns>Achieved_Increase__c</columns>
    <columns>Achievement_v_Budget__c</columns>
    <columns>Budgeted_date_effect__c</columns>
    <columns>Actual_date_effect__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trading_Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </filters>
    <label>2021</label>
</ListView>