force-app/main/default/objects/Price_Increases__c/listViews/X2022.listView-meta.xml
<ListView>
    <fullName>X2022</fullName>
    <columns>NAME</columns>
    <columns>Trading_Year__c</columns>
    <columns>Latest_Proposal__c</columns>
    <columns>Achieved_Increase__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trading_Year__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </filters>
    <label>2022</label>
</ListView>