force-app/main/default/objects/Price_Increases__c/listViews/X2023.listView-meta.xml
<ListView>
    <fullName>X2023</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Trading_Year__c</columns>
    <columns>Budgeted_Increase__c</columns>
    <columns>Latest_Proposal__c</columns>
    <columns>Achieved_Increase__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trading_Year__c</field>
        <operation>equals</operation>
        <value>2023</value>
    </filters>
    <label>2023</label>
</ListView>