force-app/main/default/objects/Price_Increases__c/listViews/X2024.listView-meta.xml
<ListView>
    <fullName>X2024</fullName>
    <columns>NAME</columns>
    <columns>Trading_Year__c</columns>
    <columns>Latest_Proposal__c</columns>
    <columns>Achieved_Increase__c</columns>
    <columns>PAF__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trading_Year__c</field>
        <operation>equals</operation>
        <value>2024</value>
    </filters>
    <filters>
        <field>Sales_Organization__c</field>
        <operation>equals</operation>
        <value>EN60</value>
    </filters>
    <label>2024</label>
</ListView>